# ELLM-Nov2025

./: pyproject.toml  test_setup.ipynb
day01/: day01-llm-qna-v2-blank.ipynb  day01-llm-summarization-v3.5-blank.ipynb
day02/: day02-lora-v2-blank.ipynb  day02-softprompt-v2-blank.ipynb
day03/: .gitignore  BETTER_LLM_OPTIONS.md  IMPROVEMENT_PLAN.md  INSTALL_NOTES.md  LLAMA_SETUP.md  QUICKSTART.md  QUICK_START_LLAMA.sh  README.md  README_LLAMA.md  SOLUTION_COMPARISON.md  UPGRADE_SUMMARY.md  app.py  app_llama.py  app_roberta.py  day03-loaders-blank.ipynb  day03-rag-v3-blank.ipynb  day03-rag-v3-improved.ipynb  find_all_ghosts.py  find_tiny_tim_details.py  questions_for_rag.txt  requirements.txt  reupload_docs.py  start.bat  start.sh  test_all_questions.py  test_full_rag.py  test_ghosts_improved.py  test_ghosts_question.py  test_hybrid.py  test_improved_rag.py  test_llama.py  test_llama_server.py  test_multiquery.py  test_retrieval.py
day03/chroma_db/: chroma.sqlite3
day03/docs/: SST RL Python Setup.docx  The Gettysburg Address.ppt.pptx  pg23962-images-3.epub  sample.eml
day03/faiss_db/: index.faiss  index.pkl  metadata.pkl
day03/templates/: index.html
day04/: day04-agents-blank.ipynb  day04-mcp-blank.py  day04-tools-blank.ipynb  main.py  pyproject.toml
day04/data/: chinook_sqlite.sqlite  cities_latlng.csv  cities_latlng.xlsx
setup/: install.bat  install.sh
