[project]
name = "ellm-2025-nov17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "chromadb>=1.3.4",
    "datasets>=4.4.1",
    "ddgs>=9.9.0",
    "diffusers>=0.35.2",
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "duckduckgo-search>=8.1.1",
    "evaluate>=0.4.6",
    "fastmcp[cli]>=2.13.0.2",
    "huggingface-hub[hf-xet]>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jq>=1.10.0",
    "langchain-community>=0.4.1",
    "loralib>=0.1.2",
    "msoffcrypto-tool>=5.4.2",
    "nbconvert[webpdf]>=7.16.6",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "openai>=2.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "pypandoc>=1.16",
    "pypdf>=6.2.0",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "rouge-score>=0.1.2",
    "safetensors>=0.6.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "smolagents>=1.22.0",
    "torch>=2.9.1",
    "torchdata>=0.11.0",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "unstructured>=0.18.18",
]

[tool.uv.workspace]
members = [
    "day04",
]
